state-chain/custom-rpc/src/snapshots/custom_rpc__type_encoder__test__chains.snap
---
source: state-chain/custom-rpc/src/type_encoder.rs
expression: value
---
{
  "name": "Inner",
  "values": [
    {
      "name": "ForeignChain",
      "values": {
        "eth": {
          "name": "Ethereum",
          "values": []
        },
        "dot": {
          "name": "Polkadot",
          "values": []
        },
        "btc": {
          "name": "Bitcoin",
          "values": []
        },
        "arb": {
          "name": "Arbitrum",
          "values": []
        }
      }
    }
  ]
}
