state-chain/custom-rpc/src/snapshots/custom_rpc__type_encoder__test__substrate_types.snap
---
source: state-chain/custom-rpc/src/type_encoder.rs
expression: value
---
{
  "name": "Inner",
  "values": [
    {
      "name": "SubstrateTypes",
      "values": {
        "account_id": [
          [
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1,
            1
          ]
        ],
        "hash": [
          [
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2,
            2
          ]
        ]
      }
    }
  ]
}
