state-chain/custom-rpc/src/snapshots/custom_rpc__type_encoder__test__unknown_event.snap
---
source: state-chain/custom-rpc/src/type_encoder.rs
expression: value
---
{
  "name": "UnknownType",
  "values": [
    "14776861743f"
  ]
}
